Issue #1521: on 64bit platforms, str.decode fails on very long strings. The t# and w# formats were not correctly handled.

Will backport.